sistema login pocho y el css pocho también.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
-<button
+    <a href="http://localhost:8080/demo1.html">
+        <button class="button button-play">JUEGO 1</button>
+    </a>
+
+    <a href="http://localhost:8080/demo2.html">
+        <button class="button button-play">JUEGO 2</button>
+    </a>
+
+    <a href="http://localhost:8080/players/bests">
+        <button class="button button-bests">BEST PLAYERS</button>
+    </a>
+
+
+
 
 </body>
 </html>
